<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context="funia.maker.pip.picjoke.scopic.activity.ShareActivity">

    <RelativeLayout
        android:id="@+id/rl_bottom_share"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rl_bottom_share"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_list_share"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:background="@color/pic_joke_90_black"
        app:layout_constraintBottom_toTopOf="@id/rl_bottom_share"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <funia.maker.pip.picjoke.scopic.view.GardeButton
                android:id="@+id/btn_share_facebook"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/item_btn_group"
                android:text="@string/facebook"
                android:textColor="@color/pic_joke_white"
                android:textSize="15sp" />

            <funia.maker.pip.picjoke.scopic.view.GardeButton
                android:id="@+id/btn_share_twitter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_btn_group"
                android:text="@string/twitter"
                android:textColor="@color/pic_joke_white"
                android:textSize="15sp" />

            <funia.maker.pip.picjoke.scopic.view.GardeButton
                android:id="@+id/btn_share_instagram"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_btn_group"
                android:text="@string/instagram"
                android:textColor="@color/pic_joke_white"
                android:textSize="15sp" />

            <funia.maker.pip.picjoke.scopic.view.GardeButton
                android:id="@+id/btn_share_pinterest"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_btn_group"
                android:text="@string/pinterest"
                android:textColor="@color/pic_joke_white"
                android:textSize="15sp" />

            <funia.maker.pip.picjoke.scopic.view.GardeButton
                android:id="@+id/btn_share_linkedin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_btn_group"
                android:text="@string/linkedin"
                android:textColor="@color/pic_joke_white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imb_show_share"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item_imb_main"
        android:scaleType="fitXY"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/imb_back_share"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item_imb_main"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imb_show_share"
        app:layout_constraintRight_toLeftOf="@id/imb_show_share" />

</android.support.constraint.ConstraintLayout>
