<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="funia.maker.pip.picjoke.scopic.activity.FrameActivity">

    <RelativeLayout
        android:id="@+id/rl_bottom_frame"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_dark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom_frame"
        android:background="@android:color/background_dark" />

    <RelativeLayout
        android:id="@+id/rl_template"
        android:layout_width="155dip"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_above="@id/rl_bottom_frame"
        android:background="@color/pic_joke_90_black">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="100dip">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imb_show_template"
        android:layout_width="72dip"
        android:layout_height="72dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dip"
        android:layout_marginEnd="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/item_imb_main"
        android:scaleType="fitXY"
        android:contentDescription="@string/des_template"
        android:src="@drawable/ic_show_template" />

    <ImageButton
        android:id="@+id/imb_back_frame"
        android:layout_width="56dip"
        android:layout_height="56dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dip"
        android:layout_marginEnd="10dip"
        android:layout_marginRight="10dip"
        android:layout_toLeftOf="@id/imb_show_template"
        android:layout_toStartOf="@id/imb_show_template"
        android:background="@drawable/item_imb_main"
        android:scaleType="fitXY"
        android:contentDescription="@string/des_back"
        android:src="@drawable/ic_back" />

    <FrameLayout
        android:id="@+id/fr_loading_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="invisible">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@android:color/black" />

        <ImageView
            android:id="@+id/imv_loading_frame"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_waiting" />
    </FrameLayout>


</RelativeLayout>
